<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">TODO LIST</string>
    <string name="add_task">Add Task</string>
    <string name="searchbar_hint">Search…</string>
    <string name="task_title">Task Title</string>
    <string name="task_deadline_optional">Task Deadline (optional)</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="status_menu">Task Status</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="description_optional">Description (optional)</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="change_date">Change Date</string>
    <string name="filters">filters</string>
    <string name="to_do">To Do</string>
    <string name="done">Done</string>
    <string name="late">Late</string>
    <string name="all_tasks">All Tasks</string>
    <string name="app_name">TODO LIST</string>
    <string name="error_message">All required fields must be completed</string>
</resources>