<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/app_title"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/task_title"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/description_optional"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTaskDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="datetime"
        android:maxLines="1"
        android:focusable="false"
        android:clickable="false"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/baseline_clear_24"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:maxLines="1"

            android:drawableStart="@drawable/baseline_calendar_24"
            android:drawablePadding="8dp"
            android:hint="@string/task_deadline_optional"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_date"
        app:icon="@drawable/baseline_calendar_24"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/buttonPickDate"
        android:fontFamily="@font/inter_bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuTaskStatus"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/buttonPickDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="dropdown_menu"
        android:hint="@string/status_menu">

        <AutoCompleteTextView
            android:id="@+id/menuTaskStatusAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/menu_items"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="invisible"
        android:fontFamily="@font/inter_bold"
        android:text="@string/error_message"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@id/menuTaskStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/errorMessage"
        />

    <Button
        android:id="@+id/buttonEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_task"
        android:fontFamily="@font/inter_bold"
        app:icon="@drawable/baseline_edit_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonDeleteTask"
        app:layout_constraintTop_toBottomOf="@id/errorMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_task"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@id/errorMessage"
        app:layout_constraintLeft_toRightOf="@id/buttonEditTask"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/buttonDeleteTask"
        app:icon="@drawable/ic_delete_24"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCancel"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cancel"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_clear_24"
        android:contentDescription="@string/cancel" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/animation"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        android:id="@+id/animationView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>