<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/app_title"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/app_title"
        android:layout_margin="16dp"
        android:background="@drawable/search_bkg"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/searchbar_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp"
        android:autofillHints="" />

    <ListView
        android:id="@+id/taskLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search"
        android:dividerHeight="10dp"
        android:divider="@android:color/transparent"
        android:padding="18dp"
        android:contextClickable="true"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:longClickable="true"
        android:layout_above="@id/filtersButton"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_add_24"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:contentDescription="@string/add_task" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filtersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_filter_list_24"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:contentDescription="@string/filters" />

</RelativeLayout>
